[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Enemies/FloatingHead_Fighter.gd" type="Script" id=1]
[ext_resource path="res://Images/Enemies/idle.png" type="Texture" id=2]
[ext_resource path="res://Images/Enemies/0.png" type="Texture" id=3]
[ext_resource path="res://Images/Enemies/1.png" type="Texture" id=4]
[ext_resource path="res://Images/Enemies/2.png" type="Texture" id=5]
[ext_resource path="res://Images/Enemies/3.png" type="Texture" id=6]
[ext_resource path="res://Images/Enemies/Bosses/HP/under.png" type="Texture" id=7]
[ext_resource path="res://Images/Enemies/Bosses/HP/fill.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 12.0
height = 40.0

[sub_resource type="Animation" id=3]

resource_name = "death"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "hit"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="FloatingHead_Fighter" type="KinematicBody2D"]

input_pickable = false
collision_layer = 2
collision_mask = 5
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
SPEED = 150
MAXHP = 50

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Run"
frame = 3
playing = true
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape" type="CollisionShape2D" parent="." index="1"]

scale = Vector2( 2, 2 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="LeftAttack" type="RayCast2D" parent="." index="2"]

position = Vector2( -20, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( -20, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RightAttack" type="RayCast2D" parent="." index="3"]

position = Vector2( 20, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 20, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="UpAttack" type="RayCast2D" parent="." index="4"]

position = Vector2( 0, -40 )
scale = Vector2( 5, 1 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, -35 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Left" type="RayCast2D" parent="." index="5"]

position = Vector2( 0, 10 )
enabled = true
exclude_parent = true
cast_to = Vector2( -700, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="LeftUp" type="RayCast2D" parent="." index="6"]

enabled = true
exclude_parent = true
cast_to = Vector2( -700, -400 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Right" type="RayCast2D" parent="." index="7"]

position = Vector2( 0, 10 )
enabled = true
exclude_parent = true
cast_to = Vector2( 700, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RightUp" type="RayCast2D" parent="." index="8"]

enabled = true
exclude_parent = true
cast_to = Vector2( 700, -400 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="HP" type="TextureProgress" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -64.0
margin_right = 640.0
margin_bottom = -24.0
rect_scale = Vector2( 0.1, 0.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 7 )
texture_over = null
texture_progress = ExtResource( 8 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="anim" type="AnimationPlayer" parent="." index="10"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/death = SubResource( 3 )
anims/hit = SubResource( 4 )
blend_times = [  ]

[node name="Timer" type="Timer" parent="." index="11"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


